# general_cpp

./: CMakeLists.txt  README.md
src/: filter_image.cpp
